# hexalamp

./: Cargo.toml  README.md
3d-models/: base-plug.3mf  base-plug.stl  base.3mf  base.ccs.json  base.stl  bottom-spacer.3mf  bottom-spacer.stl  clip-36.3mf  clip.3mf  clip.stl  diffuser.3mf  diffuser.stl  frame.3mf  frame.stl  hexalamp.scad  mount-plate.3mf  mount-plate.stl  top-cap-test.stl  top-cap.3mf  top-cap.stl
firmware/: Cargo.toml
firmware/scripts/: gamma.py
firmware/src/: adcbuttons.rs  main.rs
firmware/src/animation/: anim0.rs  anim5.rs  anim6.rs  anim7.rs  combo1.rs  gamma.rs  mod.rs
src/: adcbuttons.rs  animation.rs  main.rs
src/animation/: adcdisplay.rs  anim0.rs  anim1.rs  anim2.rs  anim3.rs  anim4.rs  anim5.rs  anim6.rs  combo1.rs  gamma.rs  mod.rs  switcher.rs
