[package]
name = "blue-pill-quickstart"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = {version = "0.3", features = ["cortex-m"]}
stm32f1xx-hal = {version = "0.7", features = ["rt", "stm32f103", "medium"]}
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
